--- a/Literatura.html
+++ b/Literatura.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-
-
+Ôªø<!DOCTYPE html>
+<html>
 <head>
-    <title>KonaËni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>Konaƒçni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaËnih automata</a></p>
+            <p><a href="default.html">Upotreba konaƒçnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,16 +24,15 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">OpÊeniti primjer</a>
+                            <a href="Opceniti_primjer.html">Opƒáeniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">ZakljuËak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saûetak</a>
-                            <a href="Misljenje.html">Miöljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">Zakljuƒçak</a>
+                    <ul>
+                        <a href="Sazetak.html">Sa≈æetak</a>
+                        <a href="Misljenje.html">Mi≈°ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
@@ -41,22 +40,20 @@
         </header>
 
 
-
-
         <section>
             <h1>Literatura</h1>
             <p>
-                <ul style="text-decoration:none; list-style-type:circle">
-                    <li><a href="http://bits.citrusbyte.com/state-design-pattern-with-ruby">Citrusbytebits. 2015. Finite state machine examples</a> (pokuöaj pristupa 18. Studeni 2017).</li>
-                    <li><a href="https://people.cs.clemson.edu/~goddard/texts/theoryOfComputation/5.pdf">Goddard. People. 17. Studeni 2017. Theory of computation </a> (pokuöaj pristupa 17. Studeni 2017).</li>
-                    <li> <a href="https://www.revitcity.com/downloads.php?action=view&object_id=14410">RevitCity. Kolovoz 2013. Turnstile picture</a> (pokuöaj pristupa 24. Studeni 2017).</li>
-                    <li>Sipser, Michael. Introduction to the theory of computation. Thomson Course Techonolgy, 2006.</li>
-                    <li> <a href="https://softwareengineering.stackexchange.com/questions/47806/examples-of-finite-state-machines">Softwareengineering. StackExchange. 2015. Finite state machine examples</a> (pokuöaj pristupa 17. Studeni 2017).</li>
-                    <li> <a href="http://whatis.techtarget.com/definition/state-machine">Whatis. Rujan 2005. State machine definition</a> (pokuöaj pristupa 13. Studeni 2017).</li>
-                    <li><a href="https://en.wikipedia.org/wiki/Finite-state_machine#Example:_coin-operated_turnstile">Wikipedia. Studeni 2017. Turnstile</a> (pokuöaj pristupa 17. Studeni 2017).</li>
-                    <li> <a href="https://hr.wikipedia.org/wiki/Mooreov_automat">Wikipedia. 4. Travnja 2013. Moore-ov automat</a> (pokuöaj pristupa 24. Studeni 2017).</li>
-                    <li> <a href="https://en.wikipedia.org/wiki/File:Pac-man.png">Wikipedia. 15. VeljaËa 2017. Pac-Man </a> (pokuöaj pristupa 24. Studeni 2017).</li>
-                </ul>
+             <ul style="text-decoration:none"> 
+<li><a href="http://bits.citrusbyte.com/state-design-pattern-with-ruby">Citrusbytebits. 2015. Finite state machine examples</a> (poku≈°aj pristupa 18. Studeni 2017).</li>
+<li><a href="https://people.cs.clemson.edu/~goddard/texts/theoryOfComputation/5.pdf">Goddard. People. 17. Studeni 2017. Theory of computation </a> (poku≈°aj pristupa 17. Studeni 2017).</li>
+<li> <a href="https://www.revitcity.com/downloads.php?action=view&object_id=14410">RevitCity. Kolovoz 2013. Turnstile picture</a> (poku≈°aj pristupa 24. Studeni 2017).</li>
+<li>Sipser, Michael. Introduction to the theory of computation. Thomson Course Techonolgy, 2006.</li>
+<li> <a href="https://softwareengineering.stackexchange.com/questions/47806/examples-of-finite-state-machines">Softwareengineering. StackExchange. 2015. Finite state machine examples</a> (poku≈°aj pristupa 17. Studeni 2017).</li>
+<li> <a href="http://whatis.techtarget.com/definition/state-machine">Whatis. Rujan 2005. State machine definition</a> (poku≈°aj pristupa 13. Studeni 2017).</li>
+<li><a href="https://en.wikipedia.org/wiki/Finite-state_machine#Example:_coin-operated_turnstile">Wikipedia. Studeni 2017. Turnstile</a> (poku≈°aj pristupa 17. Studeni 2017).</li>
+<li> <a href="https://hr.wikipedia.org/wiki/Mooreov_automat">Wikipedia. 4. Travnja 2013. Moore-ov automat</a> (poku≈°aj pristupa 24. Studeni 2017).</li>
+<li> <a href="https://en.wikipedia.org/wiki/File:Pac-man.png">Wikipedia. 15. Veljaƒça 2017. Pac-Man </a> (poku≈°aj pristupa 24. Studeni 2017).<li>
+	</ul>
 
             </p>
 
@@ -65,8 +62,8 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>SveuËiliöte:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                <li>Sveuƒçili≈°te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
