--- a/Misljenje.html
+++ b/Misljenje.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-
-
+ï»¿<!DOCTYPE html>
+<html>
 <head>
-    <title>Konaèni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>KonaÄni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,28 +24,25 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">ZakljuÄak</a>
+                    <ul>
+                        <a href="Sazetak.html">SaÅ¾etak</a>
+                        <a href="Misljenje.html">MiÅ¡ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
             </nav>
         </header>
 
-
-
         <section>
-            <h2>Mišljenje</h2>
+            <h2>MiÅ¡ljenje</h2>
             <p>
-                Konaèni automati po meni su jako jednostavni, barem za skuiti njihov princip rada. Iako ne postoje èinjenice smatram da je puno više toga oko nas stvoreno uz pomoæ principa rada automata èak i mi sami sebe moemo gledati kao konaèni automat. Npr. netko nam moe reæi neku tvrdnju ili dogağaj kao ulaz nakon èega mi procesiramo to u sebi te odluèujemo hoæemo li tu tvrdnju prihvatiti kao istinu ili neæemo. Još jedan od primjera je kada jedemo zdravu i nezdravu hranu. Prilikom jedenja zdrave hrane mi æemo s takvim ulazom poèeti gubiti kile dok kod ulaza nezdrave hrane dat æemo potpuno suprotni izlaz te se udebljati. Naravno postoji još puno primjera, no na kraju krajeva to je samo moja mašta.
+               KonaÄni automati po meni su jako jednostavni, barem za skuÅ¾iti njihov princip rada. Iako ne postoje Äinjenice smatram da je puno viÅ¡e toga oko nas stvoreno uz pomoÄ‡ principa rada automata Äak i mi sami sebe moÅ¾emo gledati kao konaÄni automat. Npr. netko nam moÅ¾e reÄ‡i neku tvrdnju ili dogaÄ‘aj kao ulaz nakon Äega mi procesiramo to u sebi te odluÄujemo hoÄ‡emo li tu tvrdnju prihvatiti kao istinu ili neÄ‡emo. JoÅ¡ jedan od primjera je kada jedemo zdravu i nezdravu hranu. Prilikom jedenja zdrave hrane mi Ä‡emo s takvim ulazom poÄeti gubiti kile dok kod ulaza nezdrave hrane dat Ä‡emo potpuno suprotni izlaz te se udebljati. Naravno postoji joÅ¡ puno primjera, no na kraju krajeva to je samo moja maÅ¡ta. 
             </p>
 
         </section>
@@ -53,8 +50,8 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                  <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
