--- a/Sazetak.html
+++ b/Sazetak.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-
-
+ï»¿<!DOCTYPE html>
+<html>
 <head>
-    <title>Konaèni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>KonaÄni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,28 +24,25 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">ZakljuÄak</a>
+                    <ul>
+                        <a href="Sazetak.html">SaÅ¾etak</a>
+                        <a href="Misljenje.html">MiÅ¡ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
             </nav>
         </header>
 
-
-
         <section>
-            <h2>Saetak</h2>
+            <h2>SaÅ¾etak</h2>
             <p>
-                Konaèni automati dijele se na deterministièke, nedeterministièke i nedeterministièke s ? prijelaza. Konaèni automat koriste ulaze da bi prešli iz jednog stanja u drugo osim kod nedeterministièkog automata s ? prijelaza koji prelazi u novo stanje i bez ulaza. Upotreba konaènih automata vidljiva je u raznovrsnim podruèjima poput informatike, raèunarstva, digitalnih sklopova itd...
+                KonaÄni automati dijele se na deterministiÄke, nedeterministiÄke i nedeterministiÄke s ? prijelaza. KonaÄni automat koriste ulaze da bi preÅ¡li iz jednog stanja u drugo osim kod nedeterministiÄkog automata s ? prijelaza koji prelazi u novo stanje i bez ulaza. Upotreba konaÄnih automata vidljiva je u raznovrsnim podruÄjima poput informatike, raÄunarstva, digitalnih sklopova itd...
             </p>
 
         </section>
@@ -53,8 +50,8 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                  <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
