--- a/Sef.html
+++ b/Sef.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-
-
+ï»¿<!DOCTYPE html>
+<html>
 <head>
-    <title>Konaèni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>KonaÄni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,16 +24,15 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">ZakljuÄak</a>
+                    <ul>
+                        <a href="Sazetak.html">SaÅ¾etak</a>
+                        <a href="Misljenje.html">MiÅ¡ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
@@ -41,11 +40,10 @@
         </header>
 
 
-
         <section>
             <h2>Sef</h2>
             <p>
-                Automat se koristi i u sefovima. Sef æe biti u stanju zakljuèaj ili otkljuèaj. Kada na ulazu upišemo krivu kombinaciju regularnih izraza sef æe ostati u stanju zakljuèaj ako su vrata sefa zatvorena. U tom stanju sef ostaje sve dok na njegov ulaz odnosno ulaz automata u stanju zakljuèaj ne dovedemo (upišemo) pravilnu kombinaciju regularnih izraza. Tada se sef otkljuèava te ostaje u tom stanju sve dok su vrata otvorena. Nakon što vrata zatvorimo automat se vraæa u poèetno stanje te zakljuèava sef.
+            Automat se koristi i u sefovima. Sef Ä‡e biti u stanju zakljuÄaj ili otkljuÄaj. Kada na ulazu upiÅ¡emo krivu kombinaciju regularnih izraza sef Ä‡e ostati u stanju zakljuÄaj ako su vrata sefa zatvorena. U tom stanju sef ostaje sve dok na njegov ulaz odnosno ulaz automata u stanju zakljuÄaj ne dovedemo (upiÅ¡emo) pravilnu kombinaciju regularnih izraza. Tada se sef otkljuÄava te ostaje u tom stanju sve dok su vrata otvorena. Nakon Å¡to vrata zatvorimo automat se vraÄ‡a u poÄetno stanje te zakljuÄava sef. 
             </p>
 
         </section>
@@ -53,8 +51,8 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+              <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
