--- a/Semafor.html
+++ b/Semafor.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-
-
+ï»¿<!DOCTYPE html>
+<html>
 <head>
-    <title>Konaèni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>KonaÄni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
+<style>
+	table,th,td {border:1px solid black;}
+</style>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,56 +27,53 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">ZakljuÄak</a>
+                    <ul>
+                        <a href="Sazetak.html">SaÅ¾etak</a>
+                        <a href="Misljenje.html">MiÅ¡ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
             </nav>
         </header>
 
-
-
         <section>
             <h2>Semafor</h2>
             <p>
-                Upotreba automata u semaforu radi u skladu s brojaèem. Automat se moe nalaziti u tri razlièita stanja crveno, uto te zeleno. Brojaè automatu daje ulaze 0 ili 1, 0 kada je odbrojavanje u tijeku, a 1 kada je odbrojavanje završilo. Tako kada je automat u stanju crveno i brojaè nije odbrojao odreğeno vrijeme automat æe ostati u stanju crveno. Nakon što brojaè odbroji odreğeno vrijeme te pošalje automatu ulaz 1 automat æe prijeæi u stanje uto. U stanju uto brojaè se vraæa na 0 te ponovno odbrojava odreğeno vrijeme postavljeno za stanje uto. Nakon što odbroji postavljeno vrijeme šalje na ulaz automatu stanje 1 prilikom èega automat iz stanja uto moe prijeæi samo u stanje zeleno. Nakon što preğe u stanje zeleno brojaè se ponovno vraæa na 0 te po istom principu nakon što odbroji vrijeme automatu šalje ulaz 1 te automat prelazi iz stanja zeleno u crveno.
-                <table>
-                    <tr>
-                        <th></th>
-                        <th>Crveno</th>
-                        <th>uto</th>
-                        <th>Zeleno</th>
-                    </tr>
-                    <tr>
-                        <td>Brojaè na 0</td>
-                        <td>Crveno</td>
-                        <td>uto</td>
-                        <td>Zeleno</td>
-                    </tr>
-                    <tr>
-                        <td>Brojaè na 1</td>
-                        <td>uto</td>
-                        <td>Zeleno</td>
-                        <td>Crveno</td>
-                    </tr>
-            </p>
-            </table>
+             Upotreba automata u semaforu radi u skladu s brojaÄem. Automat se moÅ¾e nalaziti u tri razliÄita stanja crveno, Å¾uto te zeleno. BrojaÄ automatu daje ulaze 0 ili 1, 0 kada je odbrojavanje u tijeku, a 1 kada je odbrojavanje zavrÅ¡ilo. Tako kada je automat u stanju crveno i brojaÄ nije odbrojao odreÄ‘eno vrijeme automat Ä‡e ostati u stanju crveno. Nakon Å¡to brojaÄ odbroji odreÄ‘eno vrijeme te poÅ¡alje automatu ulaz 1 automat Ä‡e prijeÄ‡i u stanje Å¾uto. U stanju Å¾uto brojaÄ se vraÄ‡a na 0 te ponovno odbrojava odreÄ‘eno vrijeme postavljeno za stanje Å¾uto. Nakon Å¡to odbroji postavljeno vrijeme Å¡alje na ulaz automatu stanje 1 prilikom Äega automat iz stanja Å¾uto moÅ¾e prijeÄ‡i samo u stanje zeleno. Nakon Å¡to preÄ‘e u stanje zeleno brojaÄ se ponovno vraÄ‡a na 0 te po istom principu nakon Å¡to odbroji vrijeme automatu Å¡alje ulaz 1 te automat prelazi iz stanja zeleno u crveno.
+        <table>      
+ <tr>
+		<th></th>
+		<th>Crveno</th>
+		<th>Å½uto</th>
+		<th>Zeleno</th>
+	</tr>
+	<tr>
+		<td>BrojaÄ na 0</td>
+		<td>Crveno</td>
+		<td>Å½uto</td>
+		<td>Zeleno</td>
+	</tr>
+	<tr>
+		<td>BrojaÄ na 1</td>
+		<td>Å½uto</td>
+		<td>Zeleno</td>
+		<td>Crveno</td>
+	</tr>
+</p>
+	</table>
         </section>
         <aside>
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                  <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
