--- a/Uvod.html
+++ b/Uvod.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-
-
+ï»¿<!DOCTYPE html>
+<html>
 <head>
-    <title>Konaèni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>KonaÄni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,42 +24,40 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">ZakljuÄak</a>
+                    <ul>
+                        <a href="Sazetak.html">SaÅ¾etak</a>
+                        <a href="Misljenje.html">MiÅ¡ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
             </nav>
         </header>
 
-
         <section>
             <h1>Uvod</h1>
-            <h2>Deterministièki konaèni automat</h2>
-            <h3>Moore-ov automat</h3>
-            <p>Mooreov automat je konaèni automat kojem je izlazna funkcija ne ovisi u o ulazu tog stroja veæ se pridruuje trenutnom stanju stroja. Dobio je naziv po njegovom osnivatelju Edwardu F. Moore-u.</p>
-            <h3>Mooly-ev automat</h3>
-            <p>Mooley-ev automat u usporedbi sa Moore-ovim izlaznu funkciju pridruuje ulaznom znaku te stanju i tako preslikava prijelaze stroja na izlaz.</p>
-            <h2>Nedeterministièki konaèni automat</h2>
-            <p>Nedeterministièki konaèni automat kao i deterministièki automat na ulazu prima odreğeni regularni izraz te prelazi u novo stanje. Meğutim nedeterministièki automat prilikom prijelaza moe prijeæi u više novih stanja dok deterministièki prelazi u samo jedno novo stanje.</p>
-            <h2>Nedeterministièki konaèni automat s ? prijelaza</h2>
-            <p>Nedeterministièki konaèni automat s ? prijelaza radi isto kao i obièni nedeterministièki automat, ali ovakav automat moe prijeæi u novo stanje ili više novih stanja tako da ne dobije nikakav ulaz ili regularni izraz. Ovaj automat zbog toga rijetko se koristi iako nam moe biti koristan u odreğenim sluèajevima. </p>
+         <h2>DeterministiÄki konaÄni automat</h2>
+		<h3>Moore-ov automat</h3>
+<p>Mooreov automat je konaÄni automat kojem je izlazna funkcija ne ovisi u o ulazu tog stroja veÄ‡ se pridruÅ¾uje trenutnom stanju stroja. Dobio je naziv po njegovom osnivatelju Edwardu F. Moore-u.</p>
+<h3>Mooly-ev automat</h3>
+<p>Mooley-ev automat u usporedbi sa Moore-ovim izlaznu funkciju pridruÅ¾uje ulaznom znaku te stanju i tako preslikava prijelaze stroja na izlaz.</p>
+<h2>NedeterministiÄki konaÄni automat</h2>
+<p>NedeterministiÄki konaÄni automat kao i deterministiÄki automat na ulazu prima odreÄ‘eni regularni izraz te prelazi u novo stanje. MeÄ‘utim nedeterministiÄki automat prilikom prijelaza moÅ¾e prijeÄ‡i u viÅ¡e novih stanja dok deterministiÄki prelazi u samo jedno novo stanje.</p>
+<h2>NedeterministiÄki konaÄni automat s ? prijelaza</h2>
+<p>NedeterministiÄki konaÄni automat s ? prijelaza radi isto kao i obiÄni nedeterministiÄki automat, ali ovakav automat moÅ¾e prijeÄ‡i u novo stanje ili viÅ¡e novih stanja tako da ne dobije nikakav ulaz ili regularni izraz. Ovaj automat zbog toga rijetko se koristi iako nam moÅ¾e biti koristan u odreÄ‘enim sluÄajevima. </p>
 
         </section>
         <aside>
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                   <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
