--- a/Opceniti_primjer.html
+++ b/Opceniti_primjer.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-
-
+ï»¿<!DOCTYPE html>
+<html>
 <head>
-    <title>Konaèni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>KonaÄni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,16 +24,15 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">ZakljuÄak</a>
+                    <ul>
+                        <a href="Sazetak.html">SaÅ¾etak</a>
+                        <a href="Misljenje.html">MiÅ¡ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
@@ -41,11 +40,10 @@
         </header>
 
 
-
         <section>
-            <h2>Opæeniti primjer</h2>
+            <h2>OpÄ‡eniti primjer</h2>
             <p>
-                Upotreba automata u igricama koristi se kada postavimo da raèunalo igra protiv nas. Jedan od primjera bi bio u nekakvoj ratnoj igrici. Automat bi u tom sluèaju imao stanja npr. trai, hodaj, stani, pucaj, ugroen, bjei. Poèeo bi iz stanja trai unutar èega bi traio naš lik. Dokle god nas ne bi vidio na ulaz od hodaj stizala bi 0 što bi oznaèavalo da nastavi hodati. Dok je na ulazu od hodaj 0 na ulazu od stani, pucaj, ugroen i bjei æe takoğer biti 0 što æe oznaèavati da raèunalni lik ne puca, nije ugroen te ne mora bjeati. Nakon što nas raèunalo uoèi na ulaz od hodaj dolazi 1. Tada na ulaz od stani i pucaj dolaze 1 što oznaèava da raèunalni lik stane i poène pucati. Na ulaze od ugroen i bjei u tom trenutku pristizat æe 0. U tom stanju ostat æe dok ivot raèunalnog lika ne preğe granicu od 20% statusa ivota nakon èega æe na ulaz od stani i pucaj dati 0 što oznaèava da prestane pucati i stajati, a na stanje ugroen bjei šalje ulaze 1 što oznaèava da je raèunalni lik ugroen i mora poèeti bjeati.
+              Upotreba automata u igricama koristi se kada postavimo da raÄunalo igra protiv nas. Jedan od primjera bi bio u nekakvoj ratnoj igrici. Automat bi u tom sluÄaju imao stanja npr. traÅ¾i, hodaj, stani, pucaj, ugroÅ¾en, bjeÅ¾i. PoÄeo bi iz stanja traÅ¾i unutar Äega bi traÅ¾io naÅ¡ lik. Dokle god nas ne bi vidio na ulaz od hodaj stizala bi 0 Å¡to bi oznaÄavalo da nastavi hodati. Dok je na ulazu od hodaj 0 na ulazu od stani, pucaj, ugroÅ¾en i bjeÅ¾i Ä‡e takoÄ‘er biti 0 Å¡to Ä‡e oznaÄavati da raÄunalni lik ne puca, nije ugroÅ¾en te ne mora bjeÅ¾ati. Nakon Å¡to nas raÄunalo uoÄi na ulaz od hodaj dolazi 1. Tada na ulaz od stani i pucaj dolaze 1 Å¡to oznaÄava da raÄunalni lik stane i poÄne pucati. Na ulaze od ugroÅ¾en i bjeÅ¾i u tom trenutku pristizat Ä‡e 0. U tom stanju ostat Ä‡e dok Å¾ivot raÄunalnog lika ne preÄ‘e granicu od 20% statusa Å¾ivota nakon Äega Ä‡e na ulaz od stani i pucaj dati 0 Å¡to oznaÄava da prestane pucati i stajati, a na stanje ugroÅ¾en bjeÅ¾i Å¡alje ulaze 1 Å¡to oznaÄava da je raÄunalni lik ugroÅ¾en i mora poÄeti bjeÅ¾ati.
             </p>
 
         </section>
@@ -53,8 +51,8 @@
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                 <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
