--- a/Pokretanje_obrtnih_vrata.html
+++ b/Pokretanje_obrtnih_vrata.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-
-
+ï»¿<!DOCTYPE html>
+<html>
 <head>
-    <title>Konaèni automati</title>
-    <link href="cssfile.css" type="text/css" rel="stylesheet" />
+<meta charset="utf-8">
+  <title>KonaÄni automati</title>
+    <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <div id="omotac">
         <header>
-            <p><a href="default.html">Upotreba konaènih automata</a></p>
+            <p><a href="default.html">Upotreba konaÄnih automata</a></p>
             <nav id="horizontal">
                 <ul>
                     <li><a href="Uvod.html">Uvod</a></li>
@@ -24,16 +24,15 @@
                     <li>
                         <a href="Upotreba_konacnih_automata_u_igricama.html">Upotreba u igricama</a>
                         <ul>
-                            <a href="Opceniti_primjer.html">Opæeniti primjer</a>
+                            <a href="Opceniti_primjer.html">OpÄ‡eniti primjer</a>
                             <a href="Pac_man.html">Pac-Man</a>
                         </ul>
                     </li>
-                    <li>
-                        <a href="Zakljucak.html">Zakljuèak</a>
-                        <ul>
-                            <a href="Sazetak.html">Saetak</a>
-                            <a href="Misljenje.html">Mišljenje</a>
-                        </ul>
+                    <li><a href="Zakljucak.html">ZakljuÄak</a>
+                    <ul>
+                        <a href="Sazetak.html">SaÅ¾etak</a>
+                        <a href="Misljenje.html">MiÅ¡ljenje</a>
+                    </ul>
                     </li>
                     <li><a href="Literatura.html">Literatura</a></li>
                 </ul>
@@ -41,21 +40,20 @@
         </header>
 
 
-
         <section>
             <h2>Pokretanje obrtnih vrata</h2>
             <p>
-                Obrtna vrata rade tako da imaju dva moguæa stanja,a to su da vrata mogu biti ili otvorena odnosno mogu se pokrenuti ili zatvorena odnosno zakljuèana i ne mogu se pokrenuti. Promjena stanja postie se putem ubacivanja novèiæa. Kada su vrata u zakljuèanom stanju mogu se dogoditi još dva moguæa stanja. Jedno od stanja je otvaranje vrata bez ubacivanja novèiæa prilikom èega æe automat vrata ostaviti u zakljuèanom stanju te osobi neæe dopustiti prolaz. Drugo stanje prilikom zakljuèanih vrata je da osoba ubaci novèiæ prilikom èega æe vrata(automat) prijeæi u stanje otvorenih vrata te dopustiti prolaz osobi. U otvorenom stanju takoğer su moguæa još dva stanja. Jedno od tih stanja je da osoba ponovno ubaci novèiæ prilikom èega automat neæe napraviti ništa te æe i dalje ostati u otvorenom stanju, a drugo stanje je da osoba nakon što ubaci novèiæ i proğe kroz vrata. Tada automat ponovno prelazi u stanje zatvorenih i zakljuèanih vrata nakon èega èeka ponovno ubacivanje novèiæa.
-                <img src="Obrtna_vrata.jpg" alt="Slika iz igrice Pac-man" style="height:auto;">
-            </p>
+              Obrtna vrata rade tako da imaju dva moguÄ‡a stanja,a to su da vrata mogu biti ili otvorena odnosno mogu se pokrenuti ili zatvorena odnosno zakljuÄana i ne mogu se pokrenuti. Promjena stanja postiÅ¾e se putem ubacivanja novÄiÄ‡a. Kada su vrata u zakljuÄanom stanju mogu se dogoditi joÅ¡ dva moguÄ‡a stanja. Jedno od stanja je otvaranje vrata bez ubacivanja novÄiÄ‡a prilikom Äega Ä‡e automat vrata ostaviti u zakljuÄanom stanju te osobi neÄ‡e dopustiti prolaz. Drugo stanje prilikom zakljuÄanih vrata je da osoba ubaci novÄiÄ‡ prilikom Äega Ä‡e vrata(automat) prijeÄ‡i u stanje otvorenih vrata te dopustiti prolaz osobi. U otvorenom stanju takoÄ‘er su moguÄ‡a joÅ¡ dva stanja. Jedno od tih stanja je da osoba ponovno ubaci novÄiÄ‡ prilikom Äega automat neÄ‡e napraviti niÅ¡ta te Ä‡e i dalje ostati u otvorenom stanju, a drugo stanje je da osoba nakon Å¡to ubaci novÄiÄ‡ i proÄ‘e kroz vrata. Tada automat ponovno prelazi u stanje zatvorenih i zakljuÄanih vrata nakon Äega Äeka ponovno ubacivanje novÄiÄ‡a.
+            <img src="Obrtna_vrata.jpg" alt="Slika iz igrice Pac-man" style="height:auto;">
+</p>
 
         </section>
         <aside>
             <ul>
                 <li>Stranicu napravio:Josip Levar</li>
                 <li>Smjer:Jednopredmetni studij iz Informatike</li>
-                <li>Sveuèilište:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
-                <li>Kontakt:<a style="color:darkgray" href="mailto:josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
+                  <li>SveuÄiliÅ¡te:<a href="http://www.inf.uniri.hr">Odjel za informatiku</a></li>
+                <li>Kontakt:<a href="josip.klevar@gmail.com">josip.klevar@gmail.com</a></li>
             </ul>
         </aside>
         <footer>
