--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-
-
+<html>
 <head>
+<meta charset="utf-8">
   <title>Konačni automati</title>
     <link href="cssfile.css" type="text/css" rel="stylesheet"/>
 </head>
